# FinancialCopilotMarketSearch

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agent/: finance_agentic_workflow.py
config/: config.yaml
prompt_library/: finance_prompt.py
scripts/: ingest_documents.py
tools/: company_financials_tool.py  financial_calculator_tool.py  fx_conversion_tool.py  market_data_tool.py  news_search_tool.py  portfolio_risk_tool.py  sec_filing_rag_tool.py
utils/: config_loader.py  document_loader.py  finance_clients.py  model_loader.py  rag_store.py
